# deadnews-template-python-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
python/deadnews_template_python_rust/: __init__.py  __main__.py  deadnews_template_python_rust.pyi
python/tests/: test_all.py
rust/: Cargo.toml
rust/src/: lib.rs
rust_python_lib/: Cargo.toml
rust_python_lib/src/: lib.rs
src/: lib.rs
src/python_lib/: python_lib.py
tests/: test_all.py
