[package]
name = "deadnews-template-python-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "deadnews_template_python_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }

[profile.release]
lto = true   # Enable Link Time Optimization.
strip = true # Remove debug symbols and reduce binary size.
