[build-system]
requires = ["maturin"]
build-backend = "maturin"

[tool.poetry]
name = "deadnews-template-python-rust"
version = "0.1.0"
description = ""
authors = ["DeadNews <aurczpbgr@mozmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
maturin = "^1.5.1"

[tool.maturin]
python-source = "python"
