[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.poetry]
name = "deadnews-template-python-rust"
version = "0.1.0"
description = "Rust Python Project Template"
authors = ["DeadNews <aurczpbgr@mozmail.com>"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
maturin = "^1.5.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
